--- a/source/_posts/2015-04-17-187.md
+++ b/source/_posts/2015-04-17-187.md
@@ -8,9 +8,9 @@ date: 2015-04-17 08:00:18
 tags:
 ---
 
-\[toc\] Android四大基本组件分别是Activity，Service，BroadcastReceiver，Content Provider。其中Activity相当于程序的每个界面，当界面不可见的时候Activity就会处于暂停或被终止的状态，Service相当于没有界面的后台程序，看不到界面，但是可以进行一些操作，BroadcastReceiver可以在系统发送某些消息的时候调用Service、Activity或者进行其他操作，Content Provider可以进行数据的存储。Activity，Service，BroadcastReceiver之间是通过叫做Intent的异步消息机制互相调用。
+Android四大基本组件分别是Activity，Service，BroadcastReceiver，Content Provider。其中Activity相当于程序的每个界面，当界面不可见的时候Activity就会处于暂停或被终止的状态，Service相当于没有界面的后台程序，看不到界面，但是可以进行一些操作，BroadcastReceiver可以在系统发送某些消息的时候调用Service、Activity或者进行其他操作，Content Provider可以进行数据的存储。Activity，Service，BroadcastReceiver之间是通过叫做Intent的异步消息机制互相调用。
 
-### 1\. Activity
+### 1. Activity
 
 Activity是Android最重要的组件，所有app打开后看到的界面、弹出框都是Activity。Activity上控件的布局等一般是在xml文件中配置，当然也可以手动在代码中写。实现一个Activity需要进行几步操作：
 
