--- a/source/_posts/2017-11-22-932.md
+++ b/source/_posts/2017-11-22-932.md
@@ -15,13 +15,13 @@ date: 2017-11-22 17:00:18
 一、下载 Redis 的源码包
 ===============
 
-1.  访问 https://redis.io/download ，在 Download 按钮上右键复制链接地址：`http://download.redis.io/releases/redis-4.0.2.tar.gz`
+1.  访问 https://redis.io/download ，在 Download 按钮上右键复制链接地址并下载：
     
+        http://download.redis.io/releases/redis-4.0.2.tar.gz
+
 2.  SSH 连上服务器，运行命令：
     
         wget http://download.redis.io/releases/redis-4.0.2.tar.gz
-        
-    
 
 二、编译 Redis
 ==========
@@ -29,37 +29,30 @@ date: 2017-11-22 17:00:18
 1.  安装 gcc 环境，如果已安装，可以跳过
     
         yum install gcc-c++
-        
-    
+
 2.  解压 Redis 源码，并进入源码目录
     
         tar -zxvf redis-4.0.2.tar.gz
         cd redis-4.0.2
-        
-    
+
 3.  make 编译 Redis
     
         make MALLOC=libc
-        
-    
+
 4.  安装 Redis
     
         make install
-        
-    
+
 5.  配置 Redis 开机启动
     
         ./utils/install_server.sh
-        
-    
+
 6.  开启、关闭 Redis
     
         service redis_6379 start
         /etc/init.d/redis_6379 start
         service redis_6379 stop
         /etc/init.d/redis_6379 stop
-        
-    
 
 三、修改配置文件
 ========
