更新文章，更新主题，自己处理图片，不适用第三方库

--- a/source/_posts/2014-03-29-89.md
+++ b/source/_posts/2014-03-29-89.md
@@ -9,8 +9,9 @@ categories:
 date: 2014-03-29 11:35:28
 ---
 
-【程序2】   题目：判断101-200之间有多少个素数，并输出所有素数。 思路：先写一个函数判断传进来的是否是素数，然后for循环101-200之间的所有的数。
-
+【程序2】题目：
+判断101-200之间有多少个素数，并输出所有素数。 思路：先写一个函数判断传进来的是否是素数，然后for循环101-200之间的所有的数。
+```java
 package org.sixlab.algorithm40;
 
 import java.util.ArrayList;
@@ -42,3 +43,4 @@ public class PrimeNumber {
 		return true;
 	}
 }
+```
