--- a/source/_posts/2014-04-04-102.md
+++ b/source/_posts/2014-04-04-102.md
@@ -9,10 +9,12 @@ categories:
 date: 2014-04-04 12:02:06
 ---
 
-【程序5】   题目：利用条件运算符的嵌套来完成此题：学习成绩> =90分的同学用A表示，60-89分之间的用B表示，60分以下的用C表示。
+【程序5】题目：
+利用条件运算符的嵌套来完成此题：学习成绩> =90分的同学用A表示，60-89分之间的用B表示，60分以下的用C表示。
 
 思路：这也算算法？
 
+```java
 package org.sixlab.algorithm40;
 
 public class Score {
@@ -36,3 +38,4 @@ public class Score {
 		}
 	}
 }
+```
