--- a/source/_posts/2015-03-21-127.md
+++ b/source/_posts/2015-03-21-127.md
@@ -9,7 +9,11 @@ categories:
 date: 2015-03-21 09:59:43
 ---
 
-本教程第二部分，讲解一下FXML的使用，本节稍微有点复杂，示例代码也会附上。 代码结构图： \[caption id="attachment_375" align="alignnone" width="300"\][![javafx目录结构](https://blog.sixlab.cn/wp-content/uploads/2015/06/2015120414354675-300x231.png)](https://blog.sixlab.cn/wp-content/uploads/2015/06/2015120414354675.png) javafx目录结构\[/caption\] 代码中：
+本教程第二部分，讲解一下FXML的使用，本节稍微有点复杂，示例代码也会附上。 代码结构图：
+
+{% img lightImg lightCenter /2015120414354675.png 300 javafx目录结构 %}
+
+ 代码中：
 
 *   pic.jpg是程序的背景图片，style.css是程序使用css改变原始样式的文件，SixlabFxmlProp.properties是国际化资源文件；
 *   SixlabFxml.xml文件即是FXML中定义程序界面的xml文件；
@@ -19,7 +23,7 @@ date: 2015-03-21 09:59:43
 #### 1. 入口文件，载入fxml资源
 
 首先讲解入口文件SixlabFxmlMain，此文件时一个继承了Application的类，和上节内容一样，唯一不同是start方法不一样了。
-
+```java
 package org.eu.sixlab.fxml;
 
 import javafx.application.Application;
@@ -47,7 +51,7 @@ public class SixlabFxmlMain extends Application {
         primaryStage.show();
     }
 }
-
+```
 此类和上一节不同的地方就是start方法，该方法主要内容：
 
 *   定义一个Parent，parent使用FXMLLoader的load方法获取到SixlabFxml.xml文件定义的内容。如果不使用国际化资源文件，可省略第二个参数；
@@ -56,7 +60,13 @@ public class SixlabFxmlMain extends Application {
 
 #### 2. xml文件的定义
 
-xml文件定义起来比较麻烦，建议使用JavaFX Scene Builder来制作，该工具功能强大，使用方便，拖拽定义之后就可导出fxml文件。 当然自己手写也可以，由于博客代码插件不太支持fxml定义的xml文件，所以将部分代码整到一行，然后截了个图（可点击在新标签页打开查看大图）： \[caption id="attachment_376" align="alignnone" width="300"\][![代码第一部分](https://blog.sixlab.cn/wp-content/uploads/2015/06/2015120414360770-300x121.png)](https://blog.sixlab.cn/wp-content/uploads/2015/06/2015120414360770.png) 代码第一部分\[/caption\] \[caption id="attachment_377" align="alignnone" width="300"\][![代码第二部分](https://blog.sixlab.cn/wp-content/uploads/2015/06/2015120414370869-300x136.png)](https://blog.sixlab.cn/wp-content/uploads/2015/06/2015120414370869.png) 代码第二部分\[/caption\] 代码中的内容（每一条内容都会标注在哪一行有这个内容，方便看代码不懂的时候在下面搜索行号）：
+xml文件定义起来比较麻烦，建议使用JavaFX Scene Builder来制作，该工具功能强大，使用方便，拖拽定义之后就可导出fxml文件。 当然自己手写也可以，由于博客代码插件不太支持fxml定义的xml文件，所以将部分代码整到一行，然后截了个图（可点击在新标签页打开查看大图）：
+
+{% img lightImg lightCenter /2015120414360770.png 300 代码第一部分 %}
+
+{% img lightImg lightCenter /2015120414370869.png 600 代码第二部分 %}
+
+ 代码中的内容（每一条内容都会标注在哪一行有这个内容，方便看代码不懂的时候在下面搜索行号）：
 
 *   4-8行，导入要使用的Java的包；
 *   10行，定义一个BorderPane，fx:controller定义了Controller类所在路径，一些Button之类的控件的触发方法就可以去这个类找，xmlns:fx将命名空间映射到后边的链接；
@@ -73,7 +83,7 @@ xml文件定义起来比较麻烦，建议使用JavaFX Scene Builder来制作，
 #### 3\. Controller
 
 Controller中是xml中控件对应的事件处理器。 示例代码：
-
+```java
 package org.eu.sixlab.fxml;
 
 import javafx.event.ActionEvent;
@@ -94,7 +104,7 @@ public class SixlabFxmlController {
         new SixlabFxMain().start(new Stage());
     }
 }
-
+```
 代码解析：
 
 *   @FXML注解，表示这个属性或者方法是和xml文件中对应着的，要调用或者初始化时JavaFx会自动进行。
@@ -120,4 +130,13 @@ js脚本要注意3个地方：
 *   Button的onAction的值不能以#开头，而且要传递event参数；
 *   脚本可以写在xml的<fx:script>标签中，也可以使用<fx:script source="sixlab.js" />导入外部js。
 
-示例代码：[百度网盘](http://pan.baidu.com/s/1ntsqaRf) | [CSDN](http://download.csdn.net/detail/nianqinianyi/8519953) 界面初始化效果图： \[caption id="attachment_383" align="alignnone" width="229"\][![初始化界面](https://blog.sixlab.cn/wp-content/uploads/2015/03/2015120414462975-229x300.png)](https://blog.sixlab.cn/wp-content/uploads/2015/03/2015120414462975.png) 初始化界面\[/caption\]   处理用户名点击效果图（Controller中处理）： \[caption id="attachment_384" align="alignnone" width="287"\][![点击处理用户名时弹出窗口](https://blog.sixlab.cn/wp-content/uploads/2015/03/2015120414470387-287x300.png)](https://blog.sixlab.cn/wp-content/uploads/2015/03/2015120414470387.png) 点击处理用户名时弹出窗口\[/caption\]   处理密码点击效果图（Js脚本处理）： \[caption id="attachment_385" align="alignnone" width="229"\][![点击处理密码时修改上方文本](https://blog.sixlab.cn/wp-content/uploads/2015/03/2015120414473781-229x300.png)](https://blog.sixlab.cn/wp-content/uploads/2015/03/2015120414473781.png) 点击处理密码时修改上方文本\[/caption\]
+示例代码：[百度网盘](http://pan.baidu.com/s/1ntsqaRf) | [CSDN](http://download.csdn.net/detail/nianqinianyi/8519953) 
+
+界面初始化效果图：
+{% img lightImg lightCenter /2015120414462975.png 300 初始化界面 %}
+
+处理用户名点击效果图（Controller中处理）：
+{% img lightImg lightCenter /2015120414470387.png 300 点击处理用户名时弹出窗口 %}
+
+处理密码点击效果图（Js脚本处理）：
+{% img lightImg lightCenter /2015120414473781.png 300 点击处理密码时修改上方文本 %}
