--- a/source/_posts/2018-05-16-idea.md
+++ b/source/_posts/2018-05-16-idea.md
@@ -8,52 +8,52 @@ tags:
   - Intellij IDEA
 categories:
   - 工具
-other: #$year-$month_mm-$day_dd $fullhour:$minute:$second  {% img [ clz1 clz2 ] /20180511152752.png 300 200 tttttt aaa %}
+other: #$year-$month_mm-$day_dd $fullhour:$minute:$second
 ---
 
 # 为了更好用
 
 ### 代码补全不区分大小写
-![](/20180511152752.png)
+{% img lightImg lightCenter  /20180511152752.png 400 %}
 
 ### 粘贴代码时自动格式化
-![](/20180514174740.png)
+{% img lightImg lightCenter  /20180514174740.png 450 %}
 
 ### 修改properties编码为UTF-8
-![](/20180511152852.png)
+{% img lightImg lightCenter  /20180511152852.png 500 %}
 
 ### 自动导入类，无需按快捷键
-![](/20180511152648.png)
+{% img lightImg lightCenter  /20180511152648.png 500 %}
 
 ### 选中文本时输入括号/引号，自动包裹
 当有选中的文本时候，输入括号、引号等符号，自动将选中的文本外加上开闭符号
 不会将选中的内容替换为括号、引号
-![](/20180511152625.png)
+{% img lightImg lightCenter  /20180511152625.png 500 %}
 
 # 为了更好看
 
 ### 取消注释在首行
 共两处设置，第一处设置：
-![](/20180516104205.png)
+{% img lightImg lightCenter  /20180516104205.png %}
 共两处设置，第二处设置：
-![](/20180516104346.png)
+{% img lightImg lightCenter  /20180516104346.png 800 %}
 
 ### 在右下角显示内存占用
-![](/20180511152920.png)
+{% img lightImg lightCenter  /20180511152920.png 400 %}
 
 ### 显示代码分割
 方法之间会有一条虚线分开；
 并且显示空白字符，更容易区分空格和 tab 位，跟容易看是否有行尾空格
-![](/20180511152714.png)
+{% img lightImg lightCenter  /20180511152714.png 400 %}
 
 ### 修改字体
 windows 可修改为 Source Code Pro，可以更好的区分0Oo/iIlL1等符号，字体也更漂亮
 Mac上不需要更改，默认的就很好了。
-![](/20180511152827.png)
+{% img lightImg lightCenter  /20180511152827.png 500 %}
 
 ### 取消部分内容的报错/警告
 Javadoc中有报错，不影响代码运行，将错误提示级别调低
-![](/20180515102357.png)
+{% img lightImg lightCenter  /20180515102357.png 600 %}
 
 StringBuffer/StringBuilder的append方法为了更容易看，使用了append(strA+strB),降低错误提示级别
-![](/20180515102417.png)
+{% img lightImg lightCenter  /20180515102417.png 600 %}
