--- a/source/_posts/2014-05-07-101.md
+++ b/source/_posts/2014-05-07-101.md
@@ -9,8 +9,11 @@ categories:
 date: 2014-05-07 12:02:03
 ---
 
-【程序7】   题目：输入一行字符，分别统计出其中英文字母、空格、数字和其它字符的个数。 思路：逐个读吧。
+【程序7】题目：
+输入一行字符，分别统计出其中英文字母、空格、数字和其它字符的个数。
 
+思路：逐个读吧。
+```java
 package org.sixlab.algorithm40;
 
 import java.util.HashMap;
@@ -52,3 +55,4 @@ public class CharacterNumber {
 		return map;
 	}
 }
+```
