js 修改，处理图片

--- a/source/_posts/2013-03-27-63.md
+++ b/source/_posts/2013-03-27-63.md
@@ -78,4 +78,4 @@ public final class R {
 ```
 
 此布局内容为：相对布局，布局里有一个TextView，这个View里显示一段text，内容为`string.xml`中`hello_world`签对应的字符串Hello world!，所以apk后如下图所示。
-{% img lightImg lightCenter  /201303.png 300 Hello world %}
+{% img lightImg postImg lightCenter /2013-03-27-63/201303.png 300 Hello world %}
