--- a/source/_posts/2015-03-21-127.md
+++ b/source/_posts/2015-03-21-127.md
@@ -11,7 +11,7 @@ date: 2015-03-21 09:59:43
 
 本教程第二部分，讲解一下FXML的使用，本节稍微有点复杂，示例代码也会附上。 代码结构图：
 
-{% img lightImg lightCenter /2015120414354675.png 300 javafx目录结构 %}
+{% img lightImg postImg lightCenter /2015-03-21-127/2015120414354675.png 300 javafx目录结构 %}
 
  代码中：
 
@@ -62,9 +62,9 @@ public class SixlabFxmlMain extends Application {
 
 xml文件定义起来比较麻烦，建议使用JavaFX Scene Builder来制作，该工具功能强大，使用方便，拖拽定义之后就可导出fxml文件。 当然自己手写也可以，由于博客代码插件不太支持fxml定义的xml文件，所以将部分代码整到一行，然后截了个图（可点击在新标签页打开查看大图）：
 
-{% img lightImg lightCenter /2015120414360770.png 300 代码第一部分 %}
+{% img lightImg postImg lightCenter /2015-03-21-127/2015120414360770.png 300 代码第一部分 %}
 
-{% img lightImg lightCenter /2015120414370869.png 600 代码第二部分 %}
+{% img lightImg postImg lightCenter /2015-03-21-127/2015120414370869.png 600 代码第二部分 %}
 
  代码中的内容（每一条内容都会标注在哪一行有这个内容，方便看代码不懂的时候在下面搜索行号）：
 
@@ -133,10 +133,10 @@ js脚本要注意3个地方：
 示例代码：[百度网盘](http://pan.baidu.com/s/1ntsqaRf) | [CSDN](http://download.csdn.net/detail/nianqinianyi/8519953) 
 
 界面初始化效果图：
-{% img lightImg lightCenter /2015120414462975.png 300 初始化界面 %}
+{% img 'lightImg postImg lightCenter' /images/2015-03-21-127/2015120414462975.png 300 初始化界面 %}
 
 处理用户名点击效果图（Controller中处理）：
-{% img lightImg lightCenter /2015120414470387.png 300 点击处理用户名时弹出窗口 %}
+{% img lightImg postImg lightCenter /2015-03-21-127/2015120414470387.png 300 点击处理用户名时弹出窗口 %}
 
 处理密码点击效果图（Js脚本处理）：
-{% img lightImg lightCenter /2015120414473781.png 300 点击处理密码时修改上方文本 %}
+{% img lightImg postImg lightCenter /2015-03-21-127/2015120414473781.png 300 点击处理密码时修改上方文本 %}
