--- a/source/_posts/2016-11-20-578.md
+++ b/source/_posts/2016-11-20-578.md
@@ -30,7 +30,7 @@ Flex布局意为弹性布局。任何容器可以指定为Flex布局，则其子
 ```
 二、概念
 
-{% img lightImg lightCenter  /201612.png 300 'flex布局' %}
+{% img lightImg postImg lightCenter  /images/2016-11-20-578/201612.png 300 'flex布局' %}
 
 采用Flex布局的元素：flex container(flex容器)
 
