--- a/source/_posts/2017-04-07-636.md
+++ b/source/_posts/2017-04-07-636.md
@@ -18,11 +18,11 @@ tocnum: false
 
 #### 1\. 安装
 
-1.  `npm install -g create-react-app yarn`
+        npm install -g create-react-app yarn
 
 #### 2\. 创建项目
 
-1.  `create-react-app ebs-react-demo`
+        create-react-app ebs-react-demo
 
 完成创建项目后，终端显示内容如下图所示：
 
@@ -30,8 +30,8 @@ tocnum: false
 
 #### 3\. 启动初始化好的 app
 
-1.  `cd ebs-react-demo`
-2.  `yarn start`
+        cd ebs-react-demo
+        yarn start
 
 访问 [http://localhost:3000/](http://localhost:3000/) 即可访问初始化好的 React 页面了。
 
@@ -44,32 +44,32 @@ tocnum: false
 
 #### 1\. 使用 yarn 安装 antd
 
-1.  `yarn add antd`
+        yarn add antd
 
 #### 2\. 体验 Antd
 
 修改 src/App.js 文件如下：
-```javascript
+```js
     import React, {Component} from 'react';
     import {Steps} from 'antd';
     import './App.css';
-
+    
     const Step = Steps.Step;
-
+     
     class App extends Component {
-    render() {
-    return (
-      <div className="App">
-        <Steps current={2}>
-          <Step status="finish" title="初始化项目" description="使用 create-react-app 初始化 React 项目。"/>
-          <Step status="process" title="添加 Antd" description="在 React 项目中添加 Antd 组件。"/>
-          <Step status="wait" title="高级配置" description="进行一些高级配置。"/>
-          <Step status="wait" title="添加 React-Router" description="添加 React-Router "/>
-          <Step status="wait" icon="smile-o" title="自由发挥" description="这一条只是试一下 icon"/>
-        </Steps>
-      </div>
-    );
-    }
+      render() {
+        return (
+          <div className="App">
+            <Steps current={2}>
+              <Step status="finish" title="初始化项目" description="使用 create-react-app 初始化 React 项目。"/>
+              <Step status="process" title="添加 Antd" description="在 React 项目中添加 Antd 组件。"/>
+              <Step status="wait" title="高级配置" description="进行一些高级配置。"/>
+              <Step status="wait" title="添加 React-Router" description="添加 React-Router "/>
+              <Step status="wait" icon="smile-o" title="自由发挥" description="这一条只是试一下 icon"/>
+            </Steps>
+          </div>
+        );
+      }
     }
     export default App;
 ```
