--- a/source/_posts/2018-05-16-idea.md
+++ b/source/_posts/2018-05-16-idea.md
@@ -30,6 +30,10 @@ other: #$year-$month_mm-$day_dd $fullhour:$minute:$second
 不会将选中的内容替换为括号、引号
 {% img lightImg postImg lightCenter /images/2018-05-16-idea/20180511152625.png 500 %}
 
+### 生成main方法
+使用 main 关键字生成main方法
+{% img lightImg postImg lightCenter /images/2018-05-16-idea/codetpl.png 500 %}
+
 # 为了更好看
 
 ### 取消注释在首行
