--- a/source/_posts/2017-03-14-609.md
+++ b/source/_posts/2017-03-14-609.md
@@ -10,17 +10,17 @@ tags:
 
 1\. 使用命令初始化项目：
 
-1.  `weex init`
+        weex init
 
 2\. 安装依赖，进入项目目录，使用 npm 命令安装依赖
 
-1.  `npm install`
+        npm install
 
 3\. 启动 Server
 
-1.  `npm run build // 编译`
-2.  `npm run dev //webpack 监听，可以自动监听修改`
-3.  `npm run serve //启动服务,可修改 package.json 对应命令来修改端口`
-4.  `npm run test`
+        npm run build // 编译`
+        npm run dev //webpack 监听，可以自动监听修改`
+        npm run serve //启动服务,可修改 package.json 对应命令来修改端口`
+        npm run test`
 
 访问：http://localhost:8080
