升级配置，修改 icon

--- a/source/_posts/2018-05-16-idea.md
+++ b/source/_posts/2018-05-16-idea.md
@@ -8,6 +8,8 @@ tags:
   - Intellij IDEA
 categories:
   - 工具
+tocnum: true
+comments: true
 other: #$year-$month_mm-$day_dd $fullhour:$minute:$second
 ---
 
