--- a/source/_posts/2018-06-06-gitlab.md
+++ b/source/_posts/2018-06-06-gitlab.md
@@ -40,7 +40,7 @@ tocnum: false
 
 1. 添加Gitlab源，注意，`官网的是ee版本，需要将ee修改为ce`:
     
-        curl https://packages.gitlab.com/install/repositories/gitlab/gitlab-ee/script.rpm.sh | sudo bash
+        curl https://packages.gitlab.com/install/repositories/gitlab/gitlab-ce/script.rpm.sh | sudo bash
 
 2. yum安装 Gitlab
     
@@ -52,13 +52,13 @@ tocnum: false
 
 1. 修改 SMTP 设置，文件为`/etc/gitlab/gitlab.rb`，不同邮箱设置相见[官网](https://docs.gitlab.com/omnibus/settings/smtp.html)：
 
-        ### Email Settings
+        ### Email Settings 取消注释并修改
         gitlab_rails['gitlab_email_enabled'] = true
         gitlab_rails['gitlab_email_from'] = 'root@sixlab.cn'
         gitlab_rails['gitlab_email_display_name'] = 'admin'
         gitlab_rails['gitlab_email_reply_to'] = 'noreplay@sixlab.cn'
         gitlab_rails['gitlab_email_subject_suffix'] = ''
-
+        ## smtp的设置，在另一处
         gitlab_rails['smtp_enable'] = true
         gitlab_rails['smtp_address'] = "smtp.exmail.qq.com"
         gitlab_rails['smtp_port'] = 587
