--- a/source/_posts/2017-11-17-874.md
+++ b/source/_posts/2017-11-17-874.md
@@ -17,10 +17,10 @@ date: 2017-11-17 17:42:21
 
 1.  访问 https://dev.mysql.com/downloads/mysql/ ，按如下选择：
 
-        操作系统：`Red Hat Enterprise Linux / Oracle Linux`
-        版本：`Red Hat Enterprise Linux 7 / Oracle Linux 7 (x86, 64-bit)`
+        操作系统：Red Hat Enterprise Linux / Oracle Linux
+        版本：Red Hat Enterprise Linux 7 / Oracle Linux 7 (x86, 64-bit)
 
-2.  选择 `RPM Bundle`，下一步
+2.  选择 `RPM Bundle`，点击后边的`download`
     
 3.  在`No thanks, just start my download`上右键复制链接地址：
 
@@ -62,13 +62,17 @@ date: 2017-11-17 17:42:21
 四、数据库初始化
 ========
 
-1.  如果是以 root 用户登录，需要`--user`选项，如果是以 mysql 身份运行，则不需要：
+1. 如果是以 root 用户登录，需要`--user`选项，如果是以 mysql 身份运行，则不需要：
 
         mysqld --initialize --user=mysql
         
-2.  initialize会以安全模式初始化数据库，然后创建一个默认密码，并标记为过期，需要登录后修改密码。使用下面命令获取密码
+2. initialize会以安全模式初始化数据库，然后创建一个默认密码，并标记为过期，需要登录后修改密码。使用下面命令获取密码
 
         cat /var/log/mysqld.log|grep password
+        
+3. 修改服务器默认端口号，编辑`/etc/my.conf`文件，在`[mysqld]`下添加一行：
+
+        port=9000
 
 五、启动数据库
 =======
