--- a/source/_posts/2018-08-15-principle1.md
+++ b/source/_posts/2018-08-15-principle1.md
@@ -35,7 +35,8 @@ public class Client {
 ```
 ## 2、 现在有个新问题，微信也能打电话，这个是走流量的。
 在工作中，常用的有两种修改方法。
-### 2.1 第一种：修改 call 方法，添加新参数（可选），并判断。但是如果未来出现新的需求，还是需要修改，而且改动风险也大，弄不好会出现`拨打电话：QQ号码，扣掉话费：5M`这样的问题：
+### 2.1 第一种：修改 call 方法，添加新参数（可选），并判断。
+但是如果未来出现新的需求，还是需要修改，而且改动风险也大，弄不好会出现`拨打电话：QQ号码，扣掉话费：5M`这样的问题：
 ```java
 class Phone {
     public void call(String number, String type, String money) {
