--- a/source/_posts/2018-08-24-idea-tips.md
+++ b/source/_posts/2018-08-24-idea-tips.md
@@ -1,5 +1,5 @@
 ---
-title: Intellij IDEA 每日提示集锦
+title: Intellij IDEA 每日提示集锦（201808）
 id: 2018/08/24/
 date: 2018-08-24 08:42:08
 categories:
@@ -23,4 +23,36 @@ To skip warnings right click on the validation side bar / marker bar and choose 
 
 使用 F2/shift+F2 键可以在`高亮的错误`间跳转。
 使用 option+command+↑/option+command+↓ 可以在 `编译错误` 或者 `搜索结果` 间跳转。
-如果需要在跳转是忽略警告信息，右键点击侧边栏的校验错误或标记，选中 `Go to high priority problems only`(仅跳转高优先级问题) 选项
+如果需要在跳转时忽略警告信息，右键点击侧边栏的校验错误或标记，选中 `Go to high priority problems only`(仅跳转高优先级问题) 选项
+
+# 2018-08-25
+
+{% img lightImg postImg lightCenter /images/2018-08-24-idea-tips/2018-08-251.png 400 %}
+
+When using basic code completion (⌃Space), type any characters that exist anywhere in an identifier.
+
+当使用基本的代码补全（Control+Space），可以输入要匹配内容的任意一个字符。
+
+# 2018-08-26
+
+{% img lightImg postImg lightCenter /images/2018-08-24-idea-tips/2018-08-26.png 400 %}
+
+Use ⌘J to complete any valid Live Template abbreviation if you don't remember it. For example, type it and press ⌘J to see what happens.
+
+如果你忘记了 Live Template 的缩写，你可以使用 Commond+J 来补全它。例如，输入`it`并按Commond+J，可以看看会发生什么。
+
+# 2018-08-27
+
+{% img lightImg postImg lightCenter /images/2018-08-24-idea-tips/2018-08-27.png 400 %}
+
+To show separator lines between methods in the editor, open the editor settings and select the Show method separators check box in the Appearance page.
+
+要在编辑器中的方法之间显示分割线，可以打开`editor settings`，在`Appearance`页选中`Show method separators`。
+
+# 2018-08-28
+
+{% img lightImg postImg lightCenter /images/2018-08-24-idea-tips/2018-08-28.png 400 %}
+
+⌃⇧J shortcut joins two lines into one and removes unnecessary space to match your code style.
+
+Control+Shift+J 快捷键作用：将两行合并为一行，并移除不必要的空格来适应您的代码格式。
