--- a/source/_posts/2018-08-24-idea-tips.md
+++ b/source/_posts/2018-08-24-idea-tips.md
@@ -1,5 +1,5 @@
 ---
-title: Intellij IDEA 每日提示集锦（201808）
+title: Intellij IDEA 每日提示集锦-201808
 id: 2018/08/24/
 date: 2018-08-24 08:42:08
 categories:
@@ -56,3 +56,11 @@ To show separator lines between methods in the editor, open the editor settings 
 ⌃⇧J shortcut joins two lines into one and removes unnecessary space to match your code style.
 
 Control+Shift+J 快捷键作用：将两行合并为一行，并移除不必要的空格来适应您的代码格式。
+
+# 2018-08-29
+
+{% img lightImg postImg lightCenter /images/2018-08-24-idea-tips/2018-08-29.png 400 %}
+
+Use ⌃↑ and ⌃↓ keys to quickly move between methods in the editor.
+
+使用 Control+↑ 和 Control+↓ 快速在编辑器中的方法之间跳转。
