更新，新主题差不多了

--- a/source/_posts/2018-08-24-idea-tips.md
+++ b/source/_posts/2018-08-24-idea-tips.md
@@ -1,6 +1,6 @@
 ---
 title: Intellij IDEA 每日提示集锦-201808
-id: 2018/08/24/
+id: 2018/08/24/idea-tips
 date: 2018-08-24 08:42:08
 categories:
   - 工具
@@ -8,10 +8,23 @@ tags:
   - IntelliJ IDEA
   - 每日提示
   - idea
+keywords: 
+  - Intellij IDEA 每日提示
+  - IDEA 每日提示
+  - IDEA tip of the day
+  - tip of the day
+  - 每日提示
+clearReading: true
+thumbnailImagePosition: right
+thumbnailImage: /images/2018-08-24-idea-tips/2018-08-24.png
+autoThumbnailImage: true
 tocnum: false
 comments: true
 ---
 
+Intellij IDEA 每天的 tip of the day 的翻译，每日翻译一个，这里是 2018 年 8 月份的tip of the day。
+
+<!-- more -->
 
 # 2018-08-24
 
@@ -72,3 +85,11 @@ Use ⌃↑ and ⌃↓ keys to quickly move between methods in the editor.
 Use Refactor | Copy to create a class which is a copy of the selected class. This can be useful, for example, when you need to create a class which has much in common with some existing class and it's not feasible to put the shared functionality in a common superclass.
 
 使用菜单 Refactor | Copy 来创建当前类的一份拷贝。这很有用，例如，当你需要创建一个类的时候，这个类和已存在的一个类很相似，但是又不可能将相同的部分放到一个公共的父类里面。
+
+# 2018-08-31
+
+{% img lightImg postImg lightCenter /images/2018-08-24-idea-tips/2018-08-31.png 400 %}
+
+Use the ⇧⌘V shortcut to choose and insert recent clipboard contents into the text.
+
+使用 shift+command+v 键打开最近剪贴板记录，来选择并将记录插入到编辑器中。
