--- a/themes/hexo-theme-tranquilpeak/languages/en.yml
+++ b/themes/hexo-theme-tranquilpeak/languages/en.yml
@@ -76,6 +76,6 @@ post:
 
 author:
     # Your biography (Markdown and HTML supported)
-    bio: ""
+    bio: "赤手空拳来到人世间<br/>为写完这段代码不顾一切"
     # Your job
-    job: ""
+    job: "software engineer"
