先这样吧，稍后再改改

--- a/source/_posts/2018-08-24-idea-tips.md
+++ b/source/_posts/2018-08-24-idea-tips.md
@@ -18,13 +18,14 @@ clearReading: true
 thumbnailImagePosition: right
 thumbnailImage: /images/2018-08-24-idea-tips/2018-08-24.png
 autoThumbnailImage: true
-tocnum: false
+toc: ---------
 comments: true
 ---
 
 Intellij IDEA 每天的 tip of the day 的翻译，每日翻译一个，这里是 2018 年 8 月份的tip of the day。
 
 <!-- more -->
+<!-- toc -->
 
 # 2018-08-24
 
