--- a/source/_posts/2018-08-24-idea-tips.md
+++ b/source/_posts/2018-08-24-idea-tips.md
@@ -18,7 +18,7 @@ clearReading: true
 thumbnailImagePosition: right
 thumbnailImage: /images/2018-08-24-idea-tips/2018-08-24.png
 autoThumbnailImage: true
-tocnum: false
+toc: true
 comments: true
 ---
 
