主题调整，目录调整，摘要调整，过期提醒

--- a/source/_posts/2011-09-19-48.md
+++ b/source/_posts/2011-09-19-48.md
@@ -12,9 +12,8 @@ categories:
 date: 2011-09-19 20:31:16
 ---
 
-        声明：时间太久，文章内容可能已过期
-
 话说我使用过无数个编辑器，神马gvim、emacs、ultraedit、editplus、SciTE、EmEditor，当然少不了微软的记事本，但是前面这几款编辑器中，没有一款让我用着很爽快的。唯有notepad2和notepad++还能较为让我满意。今天的主角就是notepad++。由于我比较喜欢Python语言的简洁（神马分号大括号，神马变量类型的声明，统统滚开，也经常做一些php的东西，所以我就想在notepad++的运行里加一些东西，让我更方便的调试Python、php程序。
+<!-- more -->
 
 1、打开notepad++，貌似废话，不打开没办法添加；
 2、按F5键，出现运行框，在里边分别输入以下内容后点保存：
