--- a/source/_posts/2011-09-25-50.md
+++ b/source/_posts/2011-09-25-50.md
@@ -10,9 +10,9 @@ categories:
 date: 2011-09-25 20:32:48
 ---
 
-        声明：时间太久，文章内容可能已过期
-
 一个小白想试试一个自己编写的C++算法对不对，但是又懒得启动visual studio 2010这么庞大的IDE，怎么办呢，他随手点啦chrome浏览器书签栏里的一个链接，在打开的网站里输入C++程序，然后点submit，算法完美运行，小白高兴极了。
+
+<!-- more -->
 
 小白用的是哪个网站呢，他用的是codepad，codepad是一款简单的在线 IDE 编辑器服务，你只需要把代码粘贴进去就可以编译运行了，连工程也不需要新建，而且codepad支持的语言达到了13种，下面是支持的语言：C，C++，D，Haskell，Lua，OCaml，PHP，Perl，Plain Text，Python，Ruby，Scheme，Tcl 。
 
