--- a/source/_posts/2011-10-02-52.md
+++ b/source/_posts/2011-10-02-52.md
@@ -9,9 +9,9 @@ categories:
 date: 2011-10-02 20:33:57
 ---
 
-        声明：时间太久，文章内容可能已过期
-
 前两天看一个android开发的教程，开始配置android开发环境的一部分还不错，但是当看到经典的hello world的时候，我果断放弃了这个教程，为什么呢？看我慢慢道来： 看百度百科咋介绍hello world的：
+
+<!-- more -->
 
         Hello World 中文意思是『你好,世界』。
         因为《The C Programme Language》中使用它做为第一个演示程序，非常著名，
