--- a/source/_posts/2011-10-10-54.md
+++ b/source/_posts/2011-10-10-54.md
@@ -9,9 +9,11 @@ categories:
 date: 2011-10-10 20:37:33
 ---
 
-        声明：时间太久，文章内容可能已过期
+我一直觉得javascript是一个强大的脚本语言。我一直想学，但是各种不给力。前几天小众软件上说有一个网站[www.codecademy.com](http://www.codecademy.com/)是一个在线互动式的学习javascript的网站，虽说是英文界面，但是我大致也能看懂。我就抽时间看了看，大致学会了点儿。在这里列了出来这些天学到的一点东西备忘。 
 
-我一直觉得javascript是一个强大的脚本语言。我一直想学，但是各种不给力。前几天小众软件上说有一个网站[www.codecademy.com](http://www.codecademy.com/)是一个在线互动式的学习javascript的网站，虽说是英文界面，但是我大致也能看懂。我就抽时间看了看，大致学会了点儿。在这里列了出来这些天学到的一点东西备忘。 1、警告框
+<!-- more -->
+
+1、警告框
 ```javascript
     alert("文本");
 ```
