--- a/source/_posts/2012-05-13-56.md
+++ b/source/_posts/2012-05-13-56.md
@@ -12,9 +12,8 @@ categories:
 date: 2012-05-13 20:38:19
 ---
 
-        声明：时间太久，文章内容可能已过期
-
 原先写过一篇《在notepad++中配置Python和php环境》，详见 [https://blog.sixlab.cn/archives/48/](https://blog.sixlab.cn/archives/48/) notepad++这个编辑器相当不错，相当轻量级，一直以来是我的最爱。每次重装系统都要重新配置notepad++，烦不胜烦，最可恶的是每次配置的时候都要上网搜上一阵，浪费时间，效果也不是很好。在这里总结一些，便于以后使用。 
+<!-- more -->
 首先是安装插件部分，菜单上的 插件-Plugin Manager-Show Plugin Manager。在Plugin Manager里找到NppExec这个插件，安装。 接着，配置C++环境，我使用的是visual studio 2008环境，估计很多人使用的也是这个环境。我参照了《[为Notepad++配备Visual C++ 2010编译器](http://www.cnblogs.com/Realh/archive/2011/12/12/2284741.html)》这篇文章。 1、添加环境变量：
 
     lib：
