--- a/source/_posts/2012-11-19-59.md
+++ b/source/_posts/2012-11-19-59.md
@@ -10,9 +10,8 @@ categories:
 date: 2012-11-19 11:18:02
 ---
 
-        声明：时间太久，文章内容可能已过期
-
 用editplus的十六进制查看器查看xv格式的数据，可以发现把xv格式的0到0×200000之间的数据删除，把0×200000到0×200400之间的数据解密，再加上后边的所有的数据，就是flv格式的视频了。
+<!-- more -->
 由于flv格式数据最开始的3个二位十六进制数据为：46 4C 56，对应的ASCII码分别为FLV，设第一个二位十六进制数据0×46为newmagicnum。xv格式从0×200000开始的数据不一定，但都是按照一定的密钥加密的，就是flv从0到0×400的所有数据分别加上密钥的值，设第一个二位十六进制数据为oldmagicnum。则密钥magicnum就是newmagicnum减去oldmagicnum。
 例子： flv格式数据为：46 4C 56 xv格式数据为：62 68 72 由于0×46比0×62小，所以密钥为：0×46+0×100-0×62 解密的过程为：删除xv文件0到0×200000之间的数据。0×200000到0×200400之间的数据分别加上magicnum，如果结果数据大于0xFF，则减去0×100。后边添加上所有未加密数据。
 
