--- a/source/_posts/2013-03-27-61.md
+++ b/source/_posts/2013-03-27-61.md
@@ -9,9 +9,9 @@ categories:
 date: 2013-03-27 11:19:15
 ---
 
-        声明：时间太久，文章内容可能已过期
-
 前几天终于将《Android开发从零开始》共43个视频看完，在此简单的做一下总结。
+
+<!-- more -->
 
 本来起了个题目叫《Android开发从零开始》学习后记，后来感觉太长了，起个短一点的名字《Android学习总结》，既然不叫《Android开发从零开始》学习后记的名字了，那我写这些总结的时候就能放开手脚多写一些东西了，在总结中，我会适当参照Android的文档来写。 
 
