--- a/source/_posts/2013-03-27-63.md
+++ b/source/_posts/2013-03-27-63.md
@@ -8,11 +8,12 @@ id: 63
 categories:
   - Android
 date: 2013-03-27 11:20:56
+toc: true
 ---
 
-        声明：时间太久，文章内容可能已过期
-
-先Hello World，后学会编程。   新建Android项目后，会生成最初始的Android代码。
+先Hello World，后学编程。
+新建Android项目后，会生成最初始的Android代码。
+<!-- more -->
 
 #### 一、Android代码目录
 
