--- a/source/_posts/2013-03-31-65.md
+++ b/source/_posts/2013-03-31-65.md
@@ -10,9 +10,8 @@ categories:
 date: 2013-03-31 11:21:52
 ---
 
-        声明：时间太久，文章内容可能已过期
-
 基本了解了Android的目录结构之后，就能知道APP运行之后显示的界面是在`/res/layout`下的xml文件中定义的，ADT在Eclipse中提供了一个可视化的编辑页面，可以直接拖放控件或者预览xml文件都修改。 
+<!-- more -->
 
 Android的布局有： 
 - LinearLayout：线性布局，垂直或者水平并列排放。通过orientation属性设置水平还是垂直方式排列，gravity设置对齐方式，layout\_weight设置权重 
