--- a/source/_posts/2013-04-06-66.md
+++ b/source/_posts/2013-04-06-66.md
@@ -10,9 +10,8 @@ categories:
 date: 2013-04-06 11:23:03
 ---
 
-        声明：时间太久，文章内容可能已过期
-
 Android中的控件非常丰富，Eclipse中打开Android程序的布局文件，以可视化方式编辑布局文件，可看到有很多种的控件，平时主要用到的控件有：TextView、Button、EditText，其他的一些控件如RadioButton、CheckBox、DatePicker、TimePicker、Spinner、AutoCompleteTextView、WebView、TabWidget等等。 各种控件简单记录：
+<!-- more -->
 
 #### TextView：
 
