--- a/source/_posts/2013-04-08-68.md
+++ b/source/_posts/2013-04-08-68.md
@@ -10,9 +10,8 @@ categories:
 date: 2013-04-08 11:23:50
 ---
 
-        声明：时间太久，文章内容可能已过期
-
 Android中主要有四大组件，Activity、Service、Content Provider（内容提供者）和BroadcastReceiver（广播接收器），这四大组件之间的通讯由Intent解决。 Intent包含了要执行的动作、要操作的数据和一些其他的附加属性。
+<!-- more -->
 
 #### 例1.打电话
 
