--- a/source/_posts/2013-05-05-91.md
+++ b/source/_posts/2013-05-05-91.md
@@ -6,12 +6,13 @@ categories:
   - 其他
 date: 2013-05-05 11:38:23
 tags:
+  - Markdown
+  - 语法
+toc: true
+tocNumber: true
 ---
-
-        声明：时间太久，文章内容可能已过期
-
 本文内容参考了[Markdown 语法说明 (简体中文版)](http://wowubuntu.com/markdown/#editor) 。
-
+<!-- more -->
 # 前言
 
 Markdown兼容HTML语法，所以直接输入的HTML语句，会按HTML代码解析
@@ -41,11 +42,11 @@ Markdown兼容HTML语法，所以直接输入的HTML语句，会按HTML代码解
 
 效果：
 
-> # 一级标题
-> 
-> ## 二级标题
-> 
-> ###### 直到六级标题
+    # 一级标题
+    
+    ## 二级标题
+    
+    ###### 直到六级标题
 
 # 区块引用
 
