--- a/source/_posts/2013-05-06-71.md
+++ b/source/_posts/2013-05-06-71.md
@@ -10,9 +10,8 @@ categories:
 date: 2013-05-06 11:24:51
 ---
 
-        声明：时间太久，文章内容可能已过期
-
 笔记中仅仅记录一些不太熟悉的东西。
+<!-- more -->
 
 1.  `type(a)`可返回a的类型。
 2.  元组tuple不可变，列表list可变。
