--- a/source/_posts/2013-05-07-72.md
+++ b/source/_posts/2013-05-07-72.md
@@ -10,7 +10,9 @@ categories:
 date: 2013-05-07 11:24:56
 ---
 
-        声明：时间太久，文章内容可能已过期
+重拾Python笔记二
+
+<!-- more -->
 
 1.  `class clss_name(parent_class):`定义一个父类为parent\_calss的类class\_name。
 2.  在类中定义的函数，第一个参数必需是self，这样在函数内就可以调用类，相当于其他语言中的this。
