--- a/source/_posts/2013-05-08-75.md
+++ b/source/_posts/2013-05-08-75.md
@@ -10,7 +10,9 @@ categories:
 date: 2013-05-08 11:27:17
 ---
 
-        声明：时间太久，文章内容可能已过期
+重拾Python笔记三
+
+<!-- more -->
 
 *   打开文件，创建文件对象`f=open('filename','r')`，第一个参数为文件名，第二个参数为读写模式，常用r或者w。
 *   读取文件内容使用`f.read(N)`、`f.readline()`、`f.readlines()`，分别是读取N bytes、读取一行、所有行并存在列表中这三种方式。
