--- a/source/_posts/2013-05-09-77.md
+++ b/source/_posts/2013-05-09-77.md
@@ -10,7 +10,8 @@ categories:
 date: 2013-05-09 11:28:10
 ---
 
-        声明：时间太久，文章内容可能已过期
+重拾Python笔记四
+<!-- more -->
 
 1.  包裹(packing)位置传递：有时候定义的方法不知道要接受多少个参数，可以在定义的时候使用包裹位置传递：def fun(*name):，在fun方法中可使用type(name)查看name的类型为元组(tuple)。
 2.  包裹关键字传递：定义方法的时候：def fun(**name):，在fun()方法中可使用type(name)查看name的类型为字典(dict)，此定义意味着按字典里的键所对应的值来给方法参数赋值。
