--- a/source/_posts/2013-05-10-79.md
+++ b/source/_posts/2013-05-10-79.md
@@ -10,7 +10,8 @@ categories:
 date: 2013-05-10 11:29:08
 ---
 
-        声明：时间太久，文章内容可能已过期
+重拾Python笔记五
+<!-- more -->
 
 1.  Everything is Object.意味着函数也是对象。
 2.  lambda表达式：func=lambda x,y:x+y，意味定义了一个函数，func，接受两个参数x和y，返回的是x和y的和。事实上lambda生成了一个函数对象赋给了func。
