--- a/source/_posts/2013-05-11-81.md
+++ b/source/_posts/2013-05-11-81.md
@@ -10,7 +10,8 @@ categories:
 date: 2013-05-11 11:30:08
 ---
 
-        声明：时间太久，文章内容可能已过期
+重拾Python笔记六
+<!-- more -->
 
 1.  name：指定代码的调用方式：
 ```python
