--- a/source/_posts/2013-05-13-80.md
+++ b/source/_posts/2013-05-13-80.md
@@ -9,11 +9,11 @@ id: 80
 categories:
   - Java
 date: 2013-05-13 11:30:05
+valid: true
 ---
-
-        声明：时间太久，文章内容可能已过期
-
 最近在好好的学习Java，把以前遗漏掉的知识点都补上，看的是圣思园的Java培训视频，前几天，搞明白了圣思园Java视频的顺序，贴在这里，方便其他也学习圣思园Java的人。
+
+<!-- more -->
 
 1.  人民银行企培视频：这个是2010年5月份的时候的企业培训视频，不是Java培训班的视频，主要讲解JSP，`建议没有基础的先不要学习这个`。
 2.  Java Se分为四部分：
