--- a/source/_posts/2014-03-22-94.md
+++ b/source/_posts/2014-03-22-94.md
@@ -10,10 +10,9 @@ categories:
   - Java
 date: 2014-03-22 11:39:02
 ---
-
-        声明：时间太久，文章内容可能已过期
-
 近几日，公司项目要求使用一个已存在的word文件，从数据库读取数据来修改这个word文件，并保存，此为背景。 模板word是一个office 2007的docx文件，在2003版本的的doc文件中，POI可以使用HWPF很方便的获取range，然后replace，不过好像背景图片什么都没有了。在docx中，正常的文本段落还是比较方便替换的，但是遇到文本框中的文字就无力了。还好POI提供了获取文档的XML内容的方法，因此可以通过XML来修改文本框中的内容，但是此xml非dom4j，而是XMLbeans，一个很少有人用的XML框架，唉，无力吐槽了。 在网上找了很多教程，finally，在伟大的IBM Developers发现了一篇介绍XMLbeans的文字，找到了一个有用的东西XMLCursor，即游标，哈哈，开始我伟大的代码之旅了：
+
+<!-- more -->
 
 ```java
 	FileInputStream fis = new FileInputStream("e:/file.docx");
