--- a/source/_posts/2015-04-16-171.md
+++ b/source/_posts/2015-04-16-171.md
@@ -9,10 +9,8 @@ categories:
 date: 2015-04-16 10:06:08
 ---
 
-        声明：时间太久，文章内容可能已过期
-
 在开发的SixTools，源于我个人平常的诸多需求。从最初使用Swing开发的Movie Recorder，到使用PyQt开发的Movie Recorder，再到现在使用JavaFx开发的SixTools，GUI程序的开发完全靠自己的兴趣和百度走到现在。而有很多东西平常并不是很常用，即使现在百度到了，可是等过一段时间之后可能就已经忘记了，太浪费时间，在这把开发SixTools过程中碰到的东西都记录下来，以便未来查阅。 \[toc\]
-
+<!-- more -->
 ### FXML初始化控件数据
 
 让FXML指定的Controller类实现Initializable接口，然后实现接口中的initialize()方法，在此方法中初始化控件的数据。
