--- a/source/_posts/2011-09-17-46.md
+++ b/source/_posts/2011-09-17-46.md
@@ -9,12 +9,12 @@ id: 46
 categories:
   - Android
 date: 2011-09-17 19:44:17
+toc: true
 ---
-
-        声明：时间太久，文章内容可能已过期
 
 # 准备工作：
 1、JDK：这个要去Oracle官网下载，[http://www.oracle.com/technetwork/java/javase/downloads/index.html](http://www.oracle.com/technetwork/java/javase/downloads/index.html)，我的是原来下载的Java SE 6 Update 26，现在有Java SE 7和Java SE 6 Update 27，都差不多。这个安装完eclipse才能运行，所以要先安装。
+<!-- more -->
 2、eclipse：打开eclipse官网的下载页面：[http://www.eclipse.org/downloads/](http://www.eclipse.org/downloads/)，找到Eclipse IDE for Java EE Developers，这个版本是比较全的，也有人使用其他版本，但是好像有些版本不是很全，装ADT的时候出问题。下载之后解压eclipse文件夹到某个文件夹，我解压到了E:program文件夹。
 3、android SDK：现在android的官网已经解封了，可以到android的官网下载[http://developer.android.com/sdk/index.html](http://developer.android.com/sdk/index.html)，当然压缩包的SDK比较常用一些，我下载到也是这个版本的。解压android-sdk-windows文件夹到某个文件夹，我解压到E:program文件夹。
 4、ADT：这个一般可以在eclipse里在线安装，这样可以自动升级，不过安装的时候一般都很慢很慢甚至无法安装，没办法，众所周知的网络环境。在eclipse里无法安装的可以直接在android官网下载[http://developer.android.com/sdk/eclipse-adt.html](http://developer.android.com/sdk/eclipse-adt.html)。
