--- a/source/_posts/2018-08-24-idea-tips.md
+++ b/source/_posts/2018-08-24-idea-tips.md
@@ -19,13 +19,12 @@ thumbnailImagePosition: right
 thumbnailImage: /images/2018-08-24-idea-tips/2018-08-24.png
 autoThumbnailImage: true
 toc: true
+tocNumber: true
 comments: true
 ---
 
 Intellij IDEA 每天的 tip of the day 的翻译，每日翻译一个，这里是 2018 年 8 月份的tip of the day。
-
 <!-- more -->
-<!-- toc -->
 
 # 2018-08-24
 
